Added APIs to get cohort objects, delete cohorts, other big fixes.
